--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+
     <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet" />
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
@@ -77,7 +82,7 @@
         <div class="navbar-nav ms-auto p-4 p-lg-0">
           <a href="index.html" class="nav-item nav-link active">Home</a>
           <a href="about.html" class="nav-item nav-link">About</a>
-          <a href="team.html" class="nav-item nav-link">Our Team</a>
+
           <a href="contact.html" class="nav-item nav-link">Contact</a>
         </div>
         <div class="dropdown" style="background-color: #06bbcc">
@@ -201,39 +206,43 @@
     <div class="container-xxl py-5">
       <div class="container">
         <div class="row g-4">
-          <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="service-item text-center pt-3">
+          <div
+            class="col-lg-4 col-md-6 col-sm-6 wow fadeInUp"
+            data-wow-delay="0.1s"
+          >
+            <div class="service-item text-center">
               <div class="p-4">
                 <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
-                <h5 class="mb-3">Teaching Experts</h5>
-                <p>We have best teaching experts for education.</p>
+                <h5 class="mb-3">Login as a Student</h5>
+                <a href="login.php" class="btn btn-primary">Login</a>
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-            <div class="service-item text-center pt-3">
+
+          <div
+            class="col-lg-4 col-md-6 col-sm-6 wow fadeInUp"
+            data-wow-delay="0.5s"
+          >
+            <div class="service-item text-center">
               <div class="p-4">
-                <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-                <h5 class="mb-3">Online Classes</h5>
-                <p>We provide learning easy to home via online.</p>
+                <i
+                  class="fa-solid fa-3x fa-person-chalkboard text-primary mb-4"
+                ></i>
+                <h5 class="mb-3">Login as a Lecturer</h5>
+                <a href="leclogin.php" class="btn btn-primary">Login</a>
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="service-item text-center pt-3">
+
+          <div
+            class="col-lg-4 col-md-6 col-sm-6 wow fadeInUp"
+            data-wow-delay="0.7s"
+          >
+            <div class="service-item text-center">
               <div class="p-4">
-                <i class="fa fa-3x fa-home text-primary mb-4"></i>
-                <h5 class="mb-3">Home Projects</h5>
-                <p>Encourgae home project of our university students.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-            <div class="service-item text-center pt-3">
-              <div class="p-4">
-                <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-                <h5 class="mb-3">Book Library</h5>
-                <p>We provide eLibrary for the students.</p>
+                <i class="fa-solid fa-3x fa-user text-primary mb-4"></i>
+                <h5 class="mb-3">Login as an Admin</h5>
+                <a href="adminlogin.php" class="btn btn-primary">Login</a>
               </div>
             </div>
           </div>
@@ -375,11 +384,11 @@
           <div class="testimonial-item text-center">
             <img
               class="border rounded-circle p-2 mx-auto mb-3"
-              src="img/testimonial-1.jpg"
+              src="img/sk.jpg"
               style="width: 80px; height: 80px"
             />
             <h5 class="mb-0">Shankaran Giritharan</h5>
-            <p>Professor</p>
+            <p>Undergraduate</p>
             <div class="testimonial-text bg-light text-center p-4">
               <p class="mb-0">Happy to be part of this project.</p>
             </div>
@@ -387,11 +396,11 @@
           <div class="testimonial-item text-center">
             <img
               class="border rounded-circle p-2 mx-auto mb-3"
-              src="img/testimonial-1.jpg"
+              src="img/nz.jpeg"
               style="width: 80px; height: 80px"
             />
             <h5 class="mb-0">Nisma Nizar</h5>
-            <p>Professor</p>
+            <p>Undergraduate</p>
             <div class="testimonial-text bg-light text-center p-4">
               <p class="mb-0">
                 Thanks everyone to make this website amazing with team work.
@@ -401,11 +410,11 @@
           <div class="testimonial-item text-center">
             <img
               class="border rounded-circle p-2 mx-auto mb-3"
-              src="img/testimonial-2.jpg"
+              src="img/al.jpeg"
               style="width: 80px; height: 80px"
             />
             <h5 class="mb-0">Alpha Azhar</h5>
-            <p>Professor</p>
+            <p>Undergraduate</p>
             <div class="testimonial-text bg-light text-center p-4">
               <p class="mb-0">
                 Pleasure to be part of this website development team.
@@ -415,11 +424,11 @@
           <div class="testimonial-item text-center">
             <img
               class="border rounded-circle p-2 mx-auto mb-3"
-              src="img/testimonial-3.jpg"
+              src="img/nir.jpg"
               style="width: 80px; height: 80px"
             />
             <h5 class="mb-0">M.Nirupan</h5>
-            <p>Engineering Technology FirstClass Student</p>
+            <p>Undergraduate</p>
             <div class="testimonial-text bg-light text-center p-4">
               <p class="mb-0">Enjoy the life with friends.</p>
             </div>
@@ -427,11 +436,11 @@
           <div class="testimonial-item text-center">
             <img
               class="border rounded-circle p-2 mx-auto mb-3"
-              src="img/testimonial-4.jpg"
+              src="img/ap.jpeg"
               style="width: 80px; height: 80px"
             />
             <h5 class="mb-0">W.A.A.Sewwandi</h5>
-            <p>Software Engineering Firstclass Student</p>
+            <p>Undergraduate</p>
             <div class="testimonial-text bg-light text-center p-4">
               <p class="mb-0">Very Pleasure to be work with my team.</p>
             </div>
@@ -448,7 +457,7 @@
     >
       <div class="container py-5">
         <div class="row g-5">
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <h4 class="text-white mb-3">Quick Link</h4>
             <a class="btn btn-link" href="about.html">About Us</a>
             <a class="btn btn-link" href="contact.html">Contact Us</a>
@@ -456,7 +465,7 @@
             <a class="btn btn-link" href="">Terms & Condition</a>
             <a class="btn btn-link" href="">FAQs & Help</a>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <h4 class="text-white mb-3">Contact</h4>
             <p class="mb-2">
               <i class="fa fa-map-marker-alt me-3"></i>Avengers building,
@@ -491,7 +500,7 @@
               ></a>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <h4 class="text-white mb-3">Gallery</h4>
             <div class="row g-2 pt-2">
               <div class="col-4">
@@ -514,23 +523,6 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6">
-            <h4 class="text-white mb-3">Comments</h4>
-            <p>If you have any comments feel free to tell.</p>
-            <div class="position-relative mx-auto" style="max-width: 400px">
-              <input
-                class="form-control border-0 w-100 py-3 ps-4 pe-5"
-                type="text"
-                placeholder="Your email"
-              />
-              <button
-                type="button"
-                class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
-              >
-                Submit
-              </button>
-            </div>
-          </div>
         </div>
       </div>
       <div class="container">
@@ -538,10 +530,7 @@
           <div class="row">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
               &copy; <a class="border-bottom" href="#">STUpack</a>, All Right
-              Reserved.
-
-              <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-              Designed By
+              Reserved. Designed By
               <a class="border-bottom" href="https://htmlcodex.com">Avengers</a>
             </div>
           </div>
