--- a/about.html
+++ b/about.html
@@ -7,10 +7,8 @@
     <meta content="" name="keywords" />
     <meta content="" name="description" />
 
-    <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
 
-    <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,7 +16,6 @@
       rel="stylesheet"
     />
 
-    <!-- Icon Font Stylesheet -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
       rel="stylesheet"
@@ -28,19 +25,15 @@
       rel="stylesheet"
     />
 
-    <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet" />
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
-    <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
 
-    <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
   </head>
 
   <body>
-    <!-- Spinner Start -->
     <div
       id="spinner"
       class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
@@ -53,9 +46,7 @@
         <span class="sr-only">Loading...</span>
       </div>
     </div>
-    <!-- Spinner End -->
 
-    <!-- Navbar Start -->
     <nav
       class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
     >
@@ -112,9 +103,7 @@
         </div>
       </div>
     </nav>
-    <!-- Navbar End -->
 
-    <!-- Header Start -->
     <div class="container-fluid bg-primary py-5 mb-5 page-header">
       <div class="container py-5">
         <div class="row justify-content-center">
@@ -125,9 +114,7 @@
         </div>
       </div>
     </div>
-    <!-- Header End -->
 
-    <!-- Service Start -->
     <div class="container-xxl py-5">
       <div class="container">
         <div class="row g-4">
@@ -135,8 +122,8 @@
             <div class="service-item text-center pt-3">
               <div class="p-4">
                 <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
-                <h5 class="mb-3">Teaching Experts</h5>
-                <p>We have best teaching experts for education.</p>
+                <h5 class="mb-3">STUDENTS</h5>
+                <p>Students Can Get Tehir Results and View Acedemic Report.</p>
               </div>
             </div>
           </div>
@@ -144,8 +131,8 @@
             <div class="service-item text-center pt-3">
               <div class="p-4">
                 <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-                <h5 class="mb-3">Online Classes</h5>
-                <p>We provide learning easy to home via online.</p>
+                <h5 class="mb-3">LECTURES</h5>
+                <p>Lectures View Student Acedmic Data.</p>
               </div>
             </div>
           </div>
@@ -153,8 +140,10 @@
             <div class="service-item text-center pt-3">
               <div class="p-4">
                 <i class="fa fa-3x fa-home text-primary mb-4"></i>
-                <h5 class="mb-3">Home Projects</h5>
-                <p>Encourgae home project of our university students.</p>
+                <h5 class="mb-3">ADMIN.</h5>
+                <p>
+                  Admin Add , Update Student & Acedmic Staff Details, Results.
+                </p>
               </div>
             </div>
           </div>
@@ -162,17 +151,15 @@
             <div class="service-item text-center pt-3">
               <div class="p-4">
                 <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-                <h5 class="mb-3">Book Library</h5>
-                <p>We provide eLibrary for the students.</p>
+                <h5 class="mb-3">STUpack</h5>
+                <p>Create Your Own Way With Your Own Style.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- Service End -->
 
-    <!-- About Start -->
     <div class="container-xxl py-5">
       <div class="container">
         <div class="row g-5">
@@ -268,10 +255,7 @@
         </div>
       </div>
     </div>
-    <!-- About End -->
-
-    <!-- Team Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-6">
       <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
           <h6 class="section-title bg-white text-center text-primary px-3">
@@ -280,7 +264,7 @@
           <h1 class="mb-5">Avengers</h1>
         </div>
         <div class="row g-4">
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+          <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="team-item bg-light">
               <div class="overflow-hidden">
                 <img class="img-fluid" src="img/sk.jpg" alt="" />
@@ -308,12 +292,12 @@
                 </div>
               </div>
               <div class="text-center p-4">
-                <h5 class="mb-0">Shankaran Giritharan</h5>
+                <h5 class="mb-0">Shankaran G</h5>
                 <small>Student</small>
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+          <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="team-item bg-light">
               <div class="overflow-hidden">
                 <img class="img-fluid" src="img/ap.jpeg" alt="" />
@@ -346,7 +330,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+          <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="team-item bg-light">
               <div class="overflow-hidden">
                 <img class="img-fluid" src="img/nir.jpg" alt="" />
@@ -379,7 +363,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+          <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
             <div class="team-item bg-light">
               <div class="overflow-hidden">
                 <img class="img-fluid" src="img/al.jpeg" alt="" />
@@ -412,7 +396,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+          <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
             <div class="team-item bg-light">
               <div class="overflow-hidden">
                 <img class="img-fluid" src="img/nz.jpeg" alt="" />
@@ -445,12 +429,43 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+            <div class="team-item bg-light">
+              <div class="overflow-hidden">
+                <img class="img-fluid" src="img/sanka.jpg" alt="" />
+              </div>
+              <div
+                class="position-relative d-flex justify-content-center"
+                style="margin-top: -23px"
+              >
+                <div class="bg-light d-flex justify-content-center pt-2 px-1">
+                  <a
+                    class="btn btn-sm-square btn-primary mx-1"
+                    href="https://www.facebook.com/"
+                    ><i class="fab fa-facebook-f"></i
+                  ></a>
+                  <a
+                    class="btn btn-sm-square btn-primary mx-1"
+                    href="https://twitter.com/"
+                    ><i class="fab fa-twitter"></i
+                  ></a>
+                  <a
+                    class="btn btn-sm-square btn-primary mx-1"
+                    href="https://www.instagram.com/"
+                    ><i class="fab fa-instagram"></i
+                  ></a>
+                </div>
+              </div>
+              <div class="text-center p-4">
+                <h5 class="mb-0">Sankani Heenkenda</h5>
+                <small>Coordinator</small>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <!-- Team End -->
 
-    <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn"
       data-wow-delay="0.1s"
@@ -513,13 +528,13 @@
                 <img class="img-fluid bg-light p-1" src="img/c3.jpg" alt="" />
               </div>
               <div class="col-4">
-                <img class="img-fluid bg-light p-1" src="img/c2.jpg" alt="" />
+                <img class="img-fluid bg-light p-1" src="img/c4.jpg" alt="" />
               </div>
               <div class="col-4">
-                <img class="img-fluid bg-light p-1" src="img/c3.jpg" alt="" />
+                <img class="img-fluid bg-light p-1" src="img/c5.jpg" alt="" />
               </div>
               <div class="col-4">
-                <img class="img-fluid bg-light p-1" src="img/c1.jpg" alt="" />
+                <img class="img-fluid bg-light p-1" src="img/c6.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -537,14 +552,11 @@
         </div>
       </div>
     </div>
-    <!-- Footer End -->
 
-    <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
       ><i class="bi bi-arrow-up"></i
     ></a>
 
-    <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
@@ -552,7 +564,6 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-    <!-- Template Javascript -->
     <script src="js/main.js"></script>
   </body>
 </html>
