--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,8 @@
     <meta content="" name="keywords" />
     <meta content="" name="description" />
 
-    <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
 
-    <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,7 +16,6 @@
       rel="stylesheet"
     />
 
-    <!-- Icon Font Stylesheet -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
       rel="stylesheet"
@@ -28,19 +25,17 @@
       rel="stylesheet"
     />
 
-    <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet" />
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
-    <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
 
-    <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
+
+    <script src="https://rawgit.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
   </head>
 
   <body>
-    <!-- Spinner Start -->
     <div
       id="spinner"
       class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
@@ -53,9 +48,7 @@
         <span class="sr-only">Loading...</span>
       </div>
     </div>
-    <!-- Spinner End -->
 
-    <!-- Navbar Start -->
     <nav
       class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
     >
@@ -112,9 +105,7 @@
         </div>
       </div>
     </nav>
-    <!-- Navbar End -->
 
-    <!-- Header Start -->
     <div class="container-fluid bg-primary py-5 mb-5 page-header">
       <div class="container py-5">
         <div class="row justify-content-center">
@@ -124,9 +115,7 @@
         </div>
       </div>
     </div>
-    <!-- Header End -->
 
-    <!-- Contact Start -->
     <div class="container-xxl py-5">
       <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -141,44 +130,52 @@
             <p class="mb-4">
               This is our contact details provde to you get us without interupt.
               Lets Meet Cheers.
-              <a href="https://htmlcodex.com/contact-form">Download Now</a>.
+              <a href="#" onclick="downloadPDF()">Download Now</a>.
             </p>
-            <div class="d-flex align-items-center mb-3">
-              <div
-                class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
-                style="width: 50px; height: 50px"
-              >
-                <i class="fa fa-map-marker-alt text-white"></i>
+            <script>
+              function downloadPDF() {
+                var element = document.getElementById("contactDetails");
+                html2pdf(element);
+              }
+            </script>
+            <div id="contactDetails">
+              <div class="d-flex align-items-center mb-3">
+                <div
+                  class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
+                  style="width: 50px; height: 50px"
+                >
+                  <i class="fa fa-map-marker-alt text-white"></i>
+                </div>
+                <div class="ms-3" id="contactDetails">
+                  <h5 class="text-primary">Office</h5>
+                  <p class="mb-0">
+                    Facultyof Technology, UniversityOf sri Jayewardenepura.
+                  </p>
+                </div>
               </div>
-              <div class="ms-3">
-                <h5 class="text-primary">Office</h5>
-                <p class="mb-0">
-                  Facultyof Technology, UniversityOf sri Jayewardenepura.
-                </p>
+              <div class="d-flex align-items-center mb-3">
+                <div
+                  class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
+                  style="width: 50px; height: 50px"
+                >
+                  <i class="fa fa-phone-alt text-white"></i>
+                </div>
+                <div class="ms-3">
+                  <h5 class="text-primary">Mobile</h5>
+                  <p class="mb-0">+012 345 67890</p>
+                </div>
               </div>
-            </div>
-            <div class="d-flex align-items-center mb-3">
-              <div
-                class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
-                style="width: 50px; height: 50px"
-              >
-                <i class="fa fa-phone-alt text-white"></i>
-              </div>
-              <div class="ms-3">
-                <h5 class="text-primary">Mobile</h5>
-                <p class="mb-0">+012 345 67890</p>
-              </div>
-            </div>
-            <div class="d-flex align-items-center">
-              <div
-                class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
-                style="width: 50px; height: 50px"
-              >
-                <i class="fa fa-envelope-open text-white"></i>
-              </div>
-              <div class="ms-3">
-                <h5 class="text-primary">Email</h5>
-                <p class="mb-0">stupack@example.com</p>
+              <div class="d-flex align-items-center">
+                <div
+                  class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
+                  style="width: 50px; height: 50px"
+                >
+                  <i class="fa fa-envelope-open text-white"></i>
+                </div>
+                <div class="ms-3">
+                  <h5 class="text-primary">Email</h5>
+                  <p class="mb-0">stupack@example.com</p>
+                </div>
               </div>
             </div>
           </div>
@@ -251,9 +248,7 @@
         </div>
       </div>
     </div>
-    <!-- Contact End -->
 
-    <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn"
       data-wow-delay="0.1s"
@@ -316,13 +311,13 @@
                 <img class="img-fluid bg-light p-1" src="img/c3.jpg" alt="" />
               </div>
               <div class="col-4">
-                <img class="img-fluid bg-light p-1" src="img/c2.jpg" alt="" />
+                <img class="img-fluid bg-light p-1" src="img/c4.jpg" alt="" />
               </div>
               <div class="col-4">
-                <img class="img-fluid bg-light p-1" src="img/c3.jpg" alt="" />
+                <img class="img-fluid bg-light p-1" src="img/c5.jpg" alt="" />
               </div>
               <div class="col-4">
-                <img class="img-fluid bg-light p-1" src="img/c1.jpg" alt="" />
+                <img class="img-fluid bg-light p-1" src="img/c6.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -340,14 +335,11 @@
         </div>
       </div>
     </div>
-    <!-- Footer End -->
 
-    <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
       ><i class="bi bi-arrow-up"></i
     ></a>
 
-    <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
@@ -355,7 +347,6 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-    <!-- Template Javascript -->
     <script src="js/main.js"></script>
   </body>
 </html>
