--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <meta content="" name="keywords" />
     <meta content="" name="description" />
 
-    <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
 
-    <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,7 +16,6 @@
       rel="stylesheet"
     />
 
-    <!-- Icon Font Stylesheet -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
       rel="stylesheet"
@@ -33,19 +30,15 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
 
-    <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet" />
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
-    <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
 
-    <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
   </head>
 
   <body>
-    <!-- Spinner Start -->
     <div
       id="spinner"
       class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
@@ -58,9 +51,7 @@
         <span class="sr-only">Loading...</span>
       </div>
     </div>
-    <!-- Spinner End -->
 
-    <!-- Navbar Start -->
     <nav
       class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0"
     >
@@ -117,9 +108,7 @@
         </div>
       </div>
     </nav>
-    <!-- Navbar End -->
 
-    <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5">
       <div class="owl-carousel header-carousel position-relative">
         <div class="owl-carousel-item position-relative">
@@ -200,9 +189,7 @@
         </div>
       </div>
     </div>
-    <!-- Carousel End -->
 
-    <!-- Service Start -->
     <div class="container-xxl py-5">
       <div class="container">
         <div class="row g-4">
@@ -249,9 +236,7 @@
         </div>
       </div>
     </div>
-    <!-- Service End -->
 
-    <!-- About Start -->
     <div class="container-xxl py-5">
       <div class="container">
         <div class="row g-5">
@@ -275,8 +260,8 @@
             </h6>
             <h1 class="mb-4">Welcome to STUpack</h1>
             <p class="mb-4">
-              This is a webiste for Faculty of Technology students and teachers
-              of University Of Sri Jayewardenepura.
+              STUpack is a webiste for the Faculty Of Technology Students &
+              Acdemic Staffs.
             </p>
             <a class="btn btn-primary py-3 px-5 mt-2" href="about.html"
               >Read More</a
@@ -285,9 +270,7 @@
         </div>
       </div>
     </div>
-    <!-- About End -->
 
-    <!-- Categories Start -->
     <div class="container-xxl py-5 category">
       <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -369,9 +352,7 @@
         </div>
       </div>
     </div>
-    <!-- Categories Start -->
 
-    <!-- Testimonial Start -->
     <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
       <div class="container">
         <div class="text-center">
@@ -448,9 +429,7 @@
         </div>
       </div>
     </div>
-    <!-- Testimonial End -->
 
-    <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn"
       data-wow-delay="0.1s"
@@ -513,13 +492,13 @@
                 <img class="img-fluid bg-light p-1" src="img/c3.jpg" alt="" />
               </div>
               <div class="col-4">
-                <img class="img-fluid bg-light p-1" src="img/c2.jpg" alt="" />
+                <img class="img-fluid bg-light p-1" src="img/c4.jpg" alt="" />
               </div>
               <div class="col-4">
-                <img class="img-fluid bg-light p-1" src="img/c3.jpg" alt="" />
+                <img class="img-fluid bg-light p-1" src="img/c5.jpg" alt="" />
               </div>
               <div class="col-4">
-                <img class="img-fluid bg-light p-1" src="img/c1.jpg" alt="" />
+                <img class="img-fluid bg-light p-1" src="img/c6.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -537,14 +516,11 @@
         </div>
       </div>
     </div>
-    <!-- Footer End -->
 
-    <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
       ><i class="bi bi-arrow-up"></i
     ></a>
 
-    <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
@@ -552,7 +528,6 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-    <!-- Template Javascript -->
     <script src="js/main.js"></script>
   </body>
 </html>
